[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Kelly_Slab/KellySlab-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/shop/Statcontainer.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Statcontainer" type="MarginContainer"]
margin_left = 50.0
margin_top = 376.0
margin_right = 380.0
margin_bottom = 712.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 330.0
margin_bottom = 336.0

[node name="Stats" type="Label" parent="VBoxContainer"]
margin_right = 330.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Stats"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 330.0
margin_bottom = 53.0

[node name="Healthtxt" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 326.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Health:"
valign = 1

[node name="Healthstatlabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 330.0
margin_right = 330.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 330.0
margin_bottom = 77.0

[node name="AttackSpeedtxt" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 163.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Attack Speed:"

[node name="AttackSpeedstatlabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 167.0
margin_right = 330.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 330.0
margin_bottom = 101.0

[node name="Damagetxt" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 163.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Damage:"

[node name="Damagestatlabel" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 167.0
margin_right = 330.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 330.0
margin_bottom = 125.0

[node name="BulletSpeedtxt" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_right = 163.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Bullet Speed"

[node name="BulletSpeedstatlabel" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 167.0
margin_right = 330.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 330.0
margin_bottom = 149.0

[node name="BulletSizetxt" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_right = 163.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Bullet Size:"

[node name="BulletSizestatlabel" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 167.0
margin_right = 330.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 153.0
margin_right = 330.0
margin_bottom = 173.0

[node name="BulletsInARowtxt" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_right = 163.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Bullets in a row:"

[node name="BulletsInARowstatlabel" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_left = 167.0
margin_right = 330.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 177.0
margin_right = 330.0
margin_bottom = 197.0

[node name="BulletsInALinetxt" type="Label" parent="VBoxContainer/HBoxContainer7"]
margin_right = 163.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Bullets in a line: "

[node name="BulletsinALinestatlabel" type="Label" parent="VBoxContainer/HBoxContainer7"]
margin_left = 167.0
margin_right = 330.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
align = 2
valign = 1
